--- a/PniTraining/packages.config
+++ b/PniTraining/packages.config
@@ -4,6 +4,13 @@
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.9.0" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.7.0" targetFramework="net452" />
+  <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net452" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net452" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net452" />
   <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net452" />
   <package id="Selenium.Support" version="3.7.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="3.7.0" targetFramework="net452" />
